# prog_niskopoziomowe

./: .gitignore  README.md  README.txt
Proj/zadania/zadanie1/lib/: fun1.c
Proj/zadania/zadanie2/: main.c
Proj/zadania/zadanie3/: calculator.c
Sem/przyklady/przyklad2/: create.sh  main.c
Sem/przyklady/przyklad2/lib/: plik2.h
Sem/przyklady/przyklad3/: create.sh  main.c
Sem/przyklady/przyklad4/: main.c
Sem/przyklady/przyklad4/plugins/: fun1.c
Sem/przyklady/przyklad5/: main.c  plugin_manager.h
prj/rozwiazania/: makefile
prj/rozwiazania/zadanie1/: main.c  makefile
prj/rozwiazania/zadanie1/lib/: fun2.c  fun2.h
prj/rozwiazania/zadanie2/: main.c
prj/rozwiazania/zadanie2/plugins/: plugin2.c
prj/rozwiazania/zadanie3/: Makefile  plugin_discovery.c  plugin_manager.c
prj/rozwiazania/zadanie3/plugins/: mul.c
prj/rozwiazania/zadanie4/: Makefile  main.c
prj/rozwiazania/zadanie4/lib/: plik1.c  plik1.h
prj/zadania/zadanie1/: clean.sh  main.c
prj/zadania/zadanie2/: Makefile  main.c
prj/zadania/zadanie4/: Makefile  main.c
przyklady/przyklad2/: create.sh  main.c
przyklady/przyklad2/lib/: plik1.h
przyklady/przyklad3/: create.sh
przyklady/przyklad3/lib/: plik1.c
przyklady/przyklad4/: Makefile  calculator.c  calculator.h  main  main.c  plugin_discovery.c  plugin_manager.c  plugin_manager.h
przyklady/przyklad4/plugins/: add.c  sub.c
przyklady/przyklad5/: calculator.c  calculator.h  main.c
sem/przyklady/: makefile
sem/przyklady/przyklad1/: Makefile  main.c
sem/przyklady/przyklad1/lib/: plik1.c  plik2.c
sem/przyklady/przyklad2/: Makefile  main.c
sem/przyklady/przyklad2/lib/: plik1.c  plik1.h  plik2.c
sem/przyklady/przyklad3/: Makefile  main.c
sem/przyklady/przyklad3/lib/: plik1.c  plik1.h  plik2.c
sem/przyklady/przyklad4/: Makefile  get_plugins.h  main.c
sem/przyklady/przyklad5/: main.c  plugin_discovery.c  plugin_discovery.h
sem/przyklady/przyklad5/plugins/: sub.c
sem/przyklady/przyklad6/: przyklad6_config
sem/przyklady/przyklad6/src/: Makefile.am  (+1 more)
sem/przyklady/przyklad6/src/wtyczka/: Makefile.am  wt_main.c
zadania/zadanie2/: main.c
zadania/zadanie3/: Makefile  calculator.h  main.c  plugin_discovery.c  plugin_discovery.h
zadania/zadanie3/plugins/: add.c
